# ri-web-social--collector

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  mypy.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/deploy/: check_pull_request.sh  empty_s3_ecr.sh  run_infracost.sh  terraform_destroy.sh  terraform_init.sh  terraform_plan_apply.sh  terraform_test.sh  terraform_validate.sh
.github/deploy/js/: generate_pr_comment.js
.github/workflows/: cd.yml  check-pr.yml  ci.yml  dependency-review.yml  infracost-workflow.yml  pr-comment.yml  security_scan.yml  terraform-core.yml
docs/: Makefile  architecture.md  mermaid.md
docs/_build/html/: .buildinfo  ci_cd.html  (+13 more)
docs/source/: ci_cd.rst  conf.py  contribuicao.rst  init.rst  mermaid.mmd  testes.rst  visao_geral.rst
infra/: Makefile  backend.tf  deploy.sh  destroy_config.json  dev.plan  main.tf  provider.tf  variables.tf  versions.tf
infra/tests/: test_s3.tftest.hcl
init/: deploy.sh  dynamo.tf  iam.tf  index.py  main.tf  terraform.tfvars  variables.tf
src/: Dockerfile  Dockerfile-index  app.py  docker-compose-aws.yml  docker-compose-index.yml  docker-compose.yml  entrypoint.sh  index.py  main.py  requirements-index.txt  requirements.txt  setup.sh
src/config/: drive.py
src/project/: __init__.py  main.py
src/service/: convert.py  extract.py  index.py  transform.py
tests/: README.md  conftest.py
tests/unit/: test_exemplo.py
(+35 files in other folders)
