[tool.poetry]
name = "ri-web-social"
version = "0.1.0"
description = ""
package-mode = false
authors = ["AriHenrique <arihenriquedev@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.5"
sphinx = "^8.2.3"
sphinxcontrib-mermaid = "^1.0.0"
sphinxawesome-theme = "^5.3.2"
rst2pdf = "^0.103.1"
sphinx-mermaid = "^0.0.8"
graphviz = "^0.20.3"
selenium = "^4.30.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"
webdriver-manager = "^4.0.2"
boto3 = "^1.37.21"
awswrangler = "^3.11.0"
pdfminer3 = "^2018.12.3.0"
html-to-json = "^2.0.0"
nltk = "^3.9.1"
matplotlib = "^3.10.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
pylint = "^3.3.6"
prometheus-client = "^0.22.1"
pytest-mock = "^3.14.0"
pytest-benchmark = "^5.1.0"
sphinx = "^8.2.3"
pre-commit = "^4.2.0"
ruff = "^0.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
